Adding outline of code for read only blocks